styles.css
/* Variables */
:root {
  --title-color: rgb(38, 38, 38);
  --subtitle-color: rgb(53, 53, 53);
  --text-color: rgb(78, 78, 78);
  --border-color: rgb(220, 220, 224);
}
body {
  width: 638px;
  margin-left: auto;
  margin-right: auto;
  /* Page defaults */
  font-family: 'Exo 2';
  font-weight: 400;
  color: var(--text-color);
}
/* Reuseable stuff */
h1 {
  font-family: 'B612';
  font-size: 45px;
  letter-spacing: 5px;
  color: var(--title-color);
  margin: 0;
  align-self: self-end;
}
h4 {
  font-family: 'Varela';
  font-size: 12px;
  letter-spacing: 2.5px;
  color: var(--subtitle-color);
  margin-block-start: 0;
  margin-block-end: 0;
  align-self: start;
}
.numbers {
  font-family: 'Graduate';
}
p {
  font-size: 8px;
  margin: 0;
  line-height: 1.5;
}
strong {
  font-weight: 600;
}
/* Vertical border separating sections. */
.border {
  border-bottom: 1px var(--border-color) solid;
  height: 50%;
}
.border-1 {
  grid-area: border1;
}
.border-2 {
  grid-area: border2;
}
.horizontal-center {
  display: grid;
  align-items: center;
  height: 100%;
}
ul {
  padding-inline-start: 0;
  list-style: none;
  line-height: 2.2;
  font-size: 8px;
  margin: 0;
}
/* For the different symbol. */
li span {
  font-size: 6px;
}
/* If I apply to playful places. */
/* h1 .left-comet {
        display: inline-block;
        transform: rotate(320deg);
      }
      h1 .right-comet {
        display: inline-block;
        transform: rotate(130deg);
      } */

/* Predominantly grid styling below, chronologically set. */
.inner-body {
  min-height: 98vh;
  max-height: 98vh;
  margin: 0;
  margin-top: 1vh;
  display: grid;
  grid-template-areas:
    'header header'
    '. .'
    'aside main'
    '. .'
    'footer footer';
  grid-template-rows: 20% 4.5% 68% 4.5% 3%;
  grid-template-columns: 34.3% 65.7%;
  /* If screen is wider */
  border: 0.5px dotted rgba(0, 0, 0, 0.2);
}
/* Markup on top of page. */
header {
  grid-area: header;
  text-align: center;
  border-bottom: 3px var(--border-color) solid;
}
/* To the left, to the left. */
aside {
  grid-area: aside;
  display: grid;
  grid-template-areas:
    '. contact .'
    '. border1 .'
    '. education .'
    '. border2 .'
    '. skills .';
  grid-template-rows: 19.4% 4.5% 26.1% 4.5% 45.5%;
  grid-template-columns: 14% 72% 14%;
  border-right: 1px var(--border-color) solid;
}
.contact {
  grid-area: contact;
}
.contact figure {
  font-size: 8px;
  margin: 0;
  display: grid;
  grid-template-columns: 25px 1fr;
}
.contact figcaption {
  display: grid;
  align-items: center;
}
.contact img {
  height: 15px;
  width: 15px;
}
.education {
  grid-area: education;
}
.skills {
  grid-area: skills;
}
main {
  grid-area: main;
  display: grid;
  grid-template-areas:
    '. profile .'
    '. border1 .'
    '. experience .'
    '. border2 .'
    '. accomplishments .';
  grid-template-rows: 17% 4.5% 45% 4.5% 29%;
  grid-template-columns: 5% 90% 5%;
}
main ul {
  margin-left: 10px;
}
.profile {
  grid-area: profile;
}
.experience {
  grid-area: experience;
}
.experience li {
  line-height: 1.5;
}
.accomplishments {
  grid-area: accomplishments;
}
footer {
  grid-area: footer;
  border-top: 1.5px var(--border-color) solid;
  margin-left: 5.5%;
  margin-right: 5.5%;
}

